02-intermediate/02-phase-2/02-delivery-and-governance/01-ci-cd-pipelines/01-part-1-the-blueprint/cicd-lessons/sis-lessons/successfully/spms-versions/spms-instance-v4/modules/security-group/main.tf
resource "aws_security_group" "spms-sg" {
  vpc_id = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-sg"
  }
}
